--- a/package.json
+++ b/package.json
@@ -39,16 +39,17 @@
         "ajv": "^8.11.0",
         "browserify": "^17.0.0",
         "css": "^3.0.0",
-        "eslint": "^8.15.0",
+        "eslint": "^8.25.0",
         "eslint-plugin-header": "^3.1.1",
-        "eslint-plugin-jsdoc": "^39.2.9",
+        "eslint-plugin-jsdoc": "^39.3.6",
+        "eslint-plugin-jsonc": "^2.4.0",
         "eslint-plugin-no-unsanitized": "^4.0.1",
         "fake-indexeddb": "^3.1.7",
-        "html-validate": "^7.1.0",
+        "html-validate": "^7.6.0",
         "jsdom": "^19.0.0",
         "parse5": "^7.0.0",
-        "stylelint": "^14.8.2",
-        "stylelint-config-recommended": "^7.0.0",
+        "stylelint": "^14.14.0",
+        "stylelint-config-recommended": "^9.0.0",
         "web-ext": "^6.8.0"
     }
 }
