--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "yomichan",
+    "name": "yomitan",
     "version": "0.0.0",
     "description": "Japanese pop-up dictionary extension for Chrome and Firefox.",
     "directories": {
@@ -19,7 +19,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/FooSoft/yomichan.git"
+        "url": "git+https://github.com/FooSoft/yomitan.git"
     },
     "license": "GPL-3.0-or-later",
     "licenses": [
@@ -29,9 +29,9 @@
         }
     ],
     "bugs": {
-        "url": "https://github.com/FooSoft/yomichan/issues"
+        "url": "https://github.com/FooSoft/yomitan/issues"
     },
-    "homepage": "https://foosoft.net/projects/yomichan/",
+    "homepage": "https://foosoft.net/projects/yomitan/",
     "webExt": {
         "sourceDir": "ext"
     },
