--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/FooSoft/yomitan.git"
+        "url": "git+https://github.com/themoeway/yomitan.git"
     },
     "license": "GPL-3.0-or-later",
     "licenses": [
@@ -29,9 +29,9 @@
         }
     ],
     "bugs": {
-        "url": "https://github.com/FooSoft/yomitan/issues"
+        "url": "https://github.com/themoeway/yomitan/issues"
     },
-    "homepage": "https://foosoft.net/projects/yomitan/",
+    "homepage": "https://github.com/themoeway",
     "webExt": {
         "sourceDir": "ext"
     },
