Update manifest scripts to only support v3, and yomichan->yomitan

--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -1,9 +1,9 @@
 {
-    "manifest_version": 2,
-    "name": "Yomichan",
+    "manifest_version": 3,
+    "name": "Yomitan",
     "version": "22.10.23.0",
     "description": "Japanese dictionary with Anki integration",
-    "author": "Alex Yatskov",
+    "author": "TheMoeWay",
     "icons": {
         "16": "images/icon16.png",
         "19": "images/icon19.png",
@@ -13,7 +13,7 @@
         "64": "images/icon64.png",
         "128": "images/icon128.png"
     },
-    "browser_action": {
+    "action": {
         "default_icon": {
             "16": "images/icon16.png",
             "19": "images/icon19.png",
@@ -23,12 +23,11 @@
             "64": "images/icon64.png",
             "128": "images/icon128.png"
         },
-        "default_title": "Yomichan",
+        "default_title": "Yomitan",
         "default_popup": "action-popup.html"
     },
     "background": {
-        "page": "background.html",
-        "persistent": true
+        "service_worker": "sw.js"
     },
     "content_scripts": [
         {
@@ -66,7 +65,7 @@
             ]
         }
     ],
-    "minimum_chrome_version": "57.0.0.0",
+    "minimum_chrome_version": "96.0.0.0",
     "options_ui": {
         "page": "settings.html",
         "open_in_tab": true
@@ -74,21 +73,22 @@
     "sandbox": {
         "pages": [
             "template-renderer.html"
-        ],
-        "content_security_policy": "sandbox allow-scripts; default-src 'self'; script-src 'self' 'unsafe-eval'; style-src 'unsafe-inline'"
+        ]
     },
     "permissions": [
-        "<all_urls>",
         "storage",
         "clipboardWrite",
         "unlimitedStorage",
         "webRequest",
-        "webRequestBlocking"
+        "declarativeNetRequest",
+        "scripting"
     ],
     "optional_permissions": [
         "clipboardRead",
-        "nativeMessaging",
-        "webNavigation"
+        "nativeMessaging"
+    ],
+    "host_permissions": [
+        "<all_urls>"
     ],
     "commands": {
         "toggleTextScanning": {
@@ -114,8 +114,18 @@
         }
     },
     "web_accessible_resources": [
-        "popup.html",
-        "template-renderer.html"
+        {
+            "resources": [
+                "popup.html",
+                "template-renderer.html"
+            ],
+            "matches": [
+                "<all_urls>"
+            ]
+        }
     ],
-    "content_security_policy": "default-src 'self'; img-src blob: 'self'; style-src 'self' 'unsafe-inline'; media-src *; connect-src *"
+    "content_security_policy": {
+        "extension_pages": "default-src 'self'; img-src blob: 'self'; style-src 'self' 'unsafe-inline'; media-src *; connect-src *",
+        "sandbox": "sandbox allow-scripts; default-src 'self'; script-src 'self' 'unsafe-eval'; style-src 'unsafe-inline'"
+    }
 }
