--- a/.github/workflows/create-prerelease-on-tag.yml
+++ b/.github/workflows/create-prerelease-on-tag.yml
@@ -5,10 +5,12 @@ on:
       - "*.*.*.*"
   workflow_dispatch:
 permissions:
-  contents: write
+  contents: read
 jobs:
   build-release-publish:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v3
 
