Switch CD to use workflow-dispatch instead of preleased trigger
For some reason, preleased wasn't triggering (maybe because github actions created the release?).

--- a/.github/workflows/create-prerelease-on-tag.yml
+++ b/.github/workflows/create-prerelease-on-tag.yml
@@ -10,6 +10,7 @@ jobs:
   build-release-publish:
     runs-on: ubuntu-latest
     permissions:
+      actions: write
       contents: write
     steps:
       - uses: actions/checkout@v3
@@ -29,3 +30,17 @@ jobs:
           generate_release_notes: true
           prerelease: true
           files: builds/*
+
+      - name: Dispatch publish-chrome-development
+        uses: aurelien-baudet/workflow-dispatch@93e95b157d791ae7f42aef8f8a0d3d723eba1c31 # pin@v2
+        with:
+          workflow: publish-chrome-development
+          token: ${{ secrets.GITHUB_TOKEN }}
+          wait-for-completion: false
+
+      - name: Dispatch publish-firefox-development
+        uses: aurelien-baudet/workflow-dispatch@93e95b157d791ae7f42aef8f8a0d3d723eba1c31 # pin@v2
+        with:
+          workflow: publish-firefox-development
+          token: ${{ secrets.GITHUB_TOKEN }}
+          wait-for-completion: false
