--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 node_modules/
 builds/
 .DS_Store
+dictionaries/
+/test-results/
+/playwright-report/
+/playwright/.cache/
+/test/playwright/__screenshots__/
