playwright: install Japanese font in Ubuntu image
By default CJK fonts are not installed on the Ubuntu image, which led to
characters not displaying on the screenshot diffing tests.

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -12,6 +12,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Install CJK fonts
+        run: sudo apt install -y noto-fonts-cjk
+
       - uses: actions/setup-node@v3
         with:
           cache: "npm"
