--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -474,6 +474,25 @@
         },
         {
             "files": [
+                "transfer.js"
+            ],
+            "env": {
+                "browser": true,
+                "serviceworker": true,
+                "es2022": true,
+                "node": true,
+                "webextensions": true
+            },
+            "rules": {
+                "no-undefined": "off"
+            },
+            "parserOptions": {
+                "ecmaVersion": 14,
+                "sourceType": "module"
+            }
+        },
+        {
+            "files": [
                 "ext/js/core.js",
                 "ext/js/yomichan.js",
                 "ext/js/accessibility/accessibility-controller.js",
