--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -13,7 +13,9 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install CJK fonts
-        run: sudo apt install -y noto-fonts-cjk
+        uses: awalsh128/cache-apt-pkgs-action@1850ee53f6e706525805321a3f2f863dcf73c962
+        with:
+          packages: fonts-noto-cjk
 
       - uses: actions/setup-node@v3
         with:
