--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -13,9 +13,10 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install CJK fonts
-        uses: awalsh128/cache-apt-pkgs-action@1850ee53f6e706525805321a3f2f863dcf73c962
+        uses: awalsh128/cache-apt-pkgs-action@1850ee53f6e706525805321a3f2f863dcf73c962 # v1.3.0
         with:
           packages: fonts-noto-cjk
+          execute_install_scripts: true
 
       - uses: actions/setup-node@v3
         with:
