--- a/.github/workflows/publish-firefox-development.yml
+++ b/.github/workflows/publish-firefox-development.yml
@@ -5,6 +5,10 @@
 name: publish-firefox-development
 on:
   workflow_dispatch:
+    inputs:
+      upload_url:
+        description: "The upload_url from the release created by create-prerelease-on-tag.yml"
+        required: true
 permissions:
   contents: read
 jobs:
@@ -44,7 +48,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ github.event.release.upload_url }}
+          upload_url: ${{ inputs.upload_url }}
           asset_path: yomitan-firefox.xpi
           asset_name: yomitan-firefox.xpi
           asset_content_type: application/x-xpinstall
