--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -1,27 +1,27 @@
 {
     "manifest_version": 2,
-    "name": "Yomichan",
+    "name": "JonnyJane",
     "version": "22.10.23.0",
-    "description": "Japanese dictionary with Anki integration",
+    "description": "Dictionary lookup with Anki integration",
     "author": "Alex Yatskov",
     "icons": {
-        "16": "images/icon16.png",
-        "19": "images/icon19.png",
-        "32": "images/icon32.png",
-        "38": "images/icon38.png",
-        "48": "images/icon48.png",
-        "64": "images/icon64.png",
-        "128": "images/icon128.png"
+        "16": "images/flag.png",
+        "19": "images/flag.png",
+        "32": "images/flag.png",
+        "38": "images/flag.png",
+        "48": "images/flag.png",
+        "64": "images/flag.png",
+        "128": "images/flag.png"
     },
     "browser_action": {
         "default_icon": {
-            "16": "images/icon16.png",
-            "19": "images/icon19.png",
-            "32": "images/icon32.png",
-            "38": "images/icon38.png",
-            "48": "images/icon48.png",
-            "64": "images/icon64.png",
-            "128": "images/icon128.png"
+            "16": "images/flag.png",
+            "19": "images/flag.png",
+            "32": "images/flag.png",
+            "38": "images/flag.png",
+            "48": "images/flag.png",
+            "64": "images/flag.png",
+            "128": "images/flag.png"
         },
         "default_title": "Yomichan",
         "default_popup": "action-popup.html"
