--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Grab latest dictionaries from dictionaries branch
         uses: actions/checkout@v3
         with:
-          repository: themoeway/yomitan # so that this works on forks
+          repository: EwanFox/yomitan # so that this works on forks
           ref: dictionaries
           path: dictionaries
 
@@ -51,7 +51,7 @@ jobs:
         id: master-screenshots
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          repo: themoeway/yomitan # so that this works on forks
+          repo: EwanFox/yomitan # so that this works on forks
           name: playwright-screenshots
           branch: master
           workflow: playwright.yml
