--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -386,6 +386,7 @@
                 "serializeError": "readonly",
                 "deserializeError": "readonly",
                 "isObject": "readonly",
+                "document": "readonly",
                 "stringReverse": "readonly",
                 "promiseTimeout": "readonly",
                 "escapeRegExp": "readonly",
