start renaming to Jonathan

--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 2,
-    "name": "JonnyJane",
+    "name": "Jonathan",
     "version": "22.10.23.0",
     "description": "Dictionary lookup with Anki integration",
     "author": "Alex Yatskov",
