--- a/.github/workflows/auto-approve.yml
+++ b/.github/workflows/auto-approve.yml
@@ -1,15 +1,16 @@
 name: Auto-Approve Safe PRs
-
-on: pull_request_target
-
+on: pull_request
 jobs:
   auto-approve:
     runs-on: ubuntu-latest
-    environment: themoeway-bot
-    permissions:
-      pull-requests: write
-    if: github.actor == 'djahandarie'
     steps:
-      - uses: hmarr/auto-approve-action@44888193675f29a83e04faf4002fa8c0b537b1e4 # v3.2.1
+      - name: Save the PR number in an artifact
+        shell: bash
+        env:
+          PR_NUM: ${{ github.event.number }}
+        run: echo $PR_NUM > pr_num.txt
+      - name: Upload the PR number
+        uses: actions/upload-artifact@v2
         with:
-          github-token: ${{ secrets.THEMOEWAY_BOT_PAT }}
+          name: pr_num
+          path: ./pr_num.txt
