Restrict workflow permissions to satisfy OSSF Scorecard

--- a/.github/workflows/auto-approve-run.yml
+++ b/.github/workflows/auto-approve-run.yml
@@ -4,6 +4,7 @@ on:
     workflows: [Auto-Approve Safe PRs]
     types:
       - completed
+permissions: {}
 jobs:
   auto-approve-run:
     runs-on: ubuntu-latest
