--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -14,13 +14,13 @@ jobs:
         run: rm -rf /usr/share/fonts
 
       - uses: actions/checkout@v3
-      
+
       - name: Install CJK fonts
         uses: awalsh128/cache-apt-pkgs-action@1850ee53f6e706525805321a3f2f863dcf73c962 # v1.3.0
         with:
           packages: fonts-ipafont-mincho
           execute_install_scripts: true
-        
+
       - uses: actions/setup-node@v3
         with:
           cache: "npm"
@@ -28,6 +28,9 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+
+      - name: Build
+        run: npm run build
 
       - name: Cache playwright browsers
         id: cache-playwright
@@ -40,7 +43,7 @@ jobs:
       - if: ${{ steps.cache-playwright.outputs.cache-hit != 'true' }}
         name: Install Playwright Browsers
         run: npx playwright install chromium
-        
+
       - name: Grab latest dictionaries from dictionaries branch
         uses: actions/checkout@v3
         with:
