--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Lint
-        run: npm run test-lint
+      - name: Lint JS
+        run: npm run test-lint-js
         env:
           CI: true
 
@@ -35,6 +35,9 @@ jobs:
         run: npm run test-lint-html
         env:
           CI: true
+
+      - name: Build Libs
+        run: npm run build-libs
 
       - name: Tests
         run: npm run test-code
