--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,7 +2,12 @@
     "compilerOptions": {
         "module": "ES2020",
         "target": "ES2020",
-        "checkJs": false
+        "checkJs": true,
+        "moduleResolution": "node",
+        "lib": [
+            "ES2021"
+        ],
+        "resolveJsonModule": true
     },
     "exclude": [
         "node_modules",
