--- a/package.json
+++ b/package.json
@@ -38,7 +38,10 @@
     },
     "devDependencies": {
         "@playwright/test": "^1.39.0",
+        "@types/chrome": "^0.0.253",
+        "@types/firefox-webext-browser": "^120.0.0",
         "@types/node": "^20.8.10",
+        "@types/web": "^0.0.119",
         "@vitest/coverage-v8": "^0.34.6",
         "ajv": "^8.12.0",
         "css": "^3.0.0",
