--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "@types/jsdom": "^21.1.6",
         "@types/node": "^20.10.0",
         "@types/wanakana": "^4.0.6",
+        "@types/zip.js": "^2.0.32",
         "@typescript-eslint/eslint-plugin": "^6.12.0",
         "@typescript-eslint/parser": "^6.12.0",
         "@vitest/coverage-v8": "^0.34.6",
