Update eslint spacing rules (#366)
* Add space-infix-ops rule

* Add no-multi-spaces

---------

Co-authored-by: Darius Jahandarie <djahandarie@gmail.com>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -192,6 +192,7 @@
             }
         ],
         "no-implicit-globals": "error",
+        "no-multi-spaces": "error",
         "no-trailing-spaces": "error",
         "no-whitespace-before-property": "error",
         "object-curly-spacing": [
@@ -220,6 +221,12 @@
         "space-in-parens": [
             "error",
             "never"
+        ],
+        "space-infix-ops": [
+            "error",
+            {
+                "int32Hint": false
+            }
         ],
         "space-unary-ops": "error",
         "spaced-comment": [
@@ -515,7 +522,10 @@
             "files": [
                 "*.json"
             ],
-            "parser": "jsonc-eslint-parser"
+            "parser": "jsonc-eslint-parser",
+            "rules": {
+                "no-multi-spaces": "off"
+            }
         },
         {
             "files": [
